--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "node": ">= 16"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.0.4"
+    "@iobroker/adapter-core": "^3.0.4",
+    "node-schedule": "^2.1.1",
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.6.0",
@@ -38,25 +40,26 @@
     "@alcalzone/release-script-plugin-manual-review": "^3.5.9",
     "@iobroker/adapter-dev": "^1.2.0",
     "@iobroker/testing": "^4.1.0",
-    "@tsconfig/node16": "^16.1.1",
-    "@types/chai": "^4.3.11",
+    "@tsconfig/node14": "^14.1.0",
+    "@types/chai": "^4.3.10",
     "@types/chai-as-promised": "^7.1.8",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^16.18.64",
+    "@types/mocha": "^10.0.4",
+    "@types/node": "^20.9.2",
     "@types/proxyquire": "^1.3.31",
-    "@types/sinon": "^17.0.2",
+    "@types/sinon": "^10.0.16",
     "@types/sinon-chai": "^3.2.12",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "gulp": "^4.0.2",
     "mocha": "^10.2.0",
     "prettier": "^3.1.0",
     "proxyquire": "^2.1.3",
-    "sinon": "^17.0.1",
+    "sinon": "^17.0.0",
     "sinon-chai": "^3.7.0",
-    "typescript": "~5.0.4"
+    "typescript": "~5.2.2"
   },
   "main": "main.js",
   "files": [
